
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*,int) ;
 scalar_t__ sc ;
 scalar_t__ shell ;
 int strlen (scalar_t__) ;

void main()
{
    printf("Egghunting Shellcode Length: %d\n", strlen(sc));
    printf("Shellcode Length: %d\n", strlen(shell));

    int (*ret)() = (int(*)())sc;

    ret();
}
